[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/Auth.gd" type="Script" id=1]
[ext_resource path="res://assets/img/side_img.png" type="Texture" id=2]
[ext_resource path="res://assets/img/app_logo.png" type="Texture" id=3]
[ext_resource path="res://assets/font/NotoSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui_theme.theme" type="Theme" id=5]
[ext_resource path="res://assets/theme/button/normal_hover.stylebox" type="StyleBox" id=6]
[ext_resource path="res://assets/theme/button/secondary_hover.stylebox" type="StyleBox" id=7]
[ext_resource path="res://assets/theme/button/secondary.stylebox" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="background" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 602.0

[node name="split" type="HSplitContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 602.0
rect_min_size = Vector2( 1024, 600 )
custom_constants/separation = 0
split_offset = 4
dragger_visibility = 2

[node name="left_side" type="TextureRect" parent="MarginContainer/split"]
margin_right = 688.0
margin_bottom = 602.0
texture = ExtResource( 2 )

[node name="r_side" type="CenterContainer" parent="MarginContainer/split"]
margin_left = 688.0
margin_right = 1024.0
margin_bottom = 602.0

[node name="vcontainer" type="VBoxContainer" parent="MarginContainer/split/r_side"]
margin_left = 24.0
margin_top = 118.0
margin_right = 312.0
margin_bottom = 484.0

[node name="logo" type="TextureRect" parent="MarginContainer/split/r_side/vcontainer"]
margin_right = 288.0
margin_bottom = 75.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="panel_login" type="VBoxContainer" parent="MarginContainer/split/r_side/vcontainer"]
visible = false
margin_top = 79.0
margin_right = 288.0
margin_bottom = 278.0
hint_tooltip = "Alamat"
custom_constants/separation = 21

[node name="login_label" type="Label" parent="MarginContainer/split/r_side/vcontainer/panel_login"]
margin_right = 288.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.454902, 0.807843, 1 )
text = "Login Page"
align = 1

[node name="in_email" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_login"]
margin_top = 44.0
margin_right = 288.0
margin_bottom = 67.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Alamat Surel"

[node name="in_password" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_login"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 111.0
hint_tooltip = "Kata sandi yang digunakan saat pendaftaran"
theme = ExtResource( 5 )
secret = true
secret_character = "•"
placeholder_text = "Kata Sandi"

[node name="btn_login" type="Button" parent="MarginContainer/split/r_side/vcontainer/panel_login"]
margin_top = 132.0
margin_right = 288.0
margin_bottom = 155.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
text = "Masuk"

[node name="btn_goto_register" type="Button" parent="MarginContainer/split/r_side/vcontainer/panel_login"]
margin_top = 176.0
margin_right = 288.0
margin_bottom = 199.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Daftar"

[node name="panel_register" type="VBoxContainer" parent="MarginContainer/split/r_side/vcontainer"]
editor/display_folded = true
margin_top = 79.0
margin_right = 288.0
margin_bottom = 366.0
hint_tooltip = "Alamat"
custom_constants/separation = 21

[node name="register_label" type="Label" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_right = 288.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.454902, 0.807843, 1 )
text = "Register Page"
align = 1

[node name="in_fname" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 44.0
margin_right = 288.0
margin_bottom = 67.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Nama Depan"

[node name="in_lname" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 111.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Nama Belakang"

[node name="in_phone" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 132.0
margin_right = 288.0
margin_bottom = 155.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Nomor Telefon"

[node name="in_password" type="LineEdit" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 176.0
margin_right = 288.0
margin_bottom = 199.0
hint_tooltip = "Kata sandi yang digunakan saat pendaftaran"
theme = ExtResource( 5 )
secret = true
secret_character = "•"
placeholder_text = "Kata Sandi"

[node name="btn_register" type="Button" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 220.0
margin_right = 288.0
margin_bottom = 243.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
text = "Daftar"

[node name="btn_goto_login" type="Button" parent="MarginContainer/split/r_side/vcontainer/panel_register"]
margin_top = 264.0
margin_right = 288.0
margin_bottom = 287.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Masuk"

[connection signal="button_up" from="MarginContainer/split/r_side/vcontainer/panel_login/btn_goto_register" to="." method="_on_btn_goto_register_button_up"]
[connection signal="button_up" from="MarginContainer/split/r_side/vcontainer/panel_register/btn_goto_login" to="." method="_on_btn_goto_login_button_up"]
